Introduced abstract execute object, added notice template, license header

--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,21 @@
+<!--
+
+    ﻿Copyright (C) ${inceptionYear} - ${currentYear} 52°North Initiative for Geospatial Open Source
+    Software GmbH
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -10,26 +28,28 @@
 	<artifactId>wps-client-lib</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>52 North WPS Client libary</name>
+	<inceptionYear>2017</inceptionYear>
 	<properties>
 		<version.java>1.8</version.java>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<slf4j.version>1.7.5</slf4j.version>
+		<common-xml.version>2.3.0</common-xml.version>
 		<logback.version>1.0.13</logback.version>
 		<org.springframework.version>4.1.6.RELEASE</org.springframework.version>
 		<org.spring-security.version>4.0.1.RELEASE</org.spring-security.version>
 		<maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
-		<currentYear>2016</currentYear>
+		<currentYear>2017</currentYear>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.n52.wps</groupId>
 			<artifactId>52n-xml-wps-v20</artifactId>
-			<version>2.1.1-SNAPSHOT</version>
+			<version>${common-xml.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.n52.sensorweb</groupId>
 			<artifactId>52n-xml-wps-v100</artifactId>
-			<version>2.1.1-SNAPSHOT</version>
+			<version>${common-xml.version}</version>
 		</dependency>
 		<!-- logging -->
 		<dependency>
@@ -78,6 +98,26 @@
 			<groupId>org.n52.wps</groupId>
 			<artifactId>52n-wps-io-impl</artifactId>
 			<version>3.6.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-codec</groupId>
+					<artifactId>commons-codec</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.xmlbeans</groupId>
+					<artifactId>xmlbeans</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.n52.sensorweb</groupId>
+					<artifactId>52n-xml-wps-v100</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
