--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
 			<groupId>org.n52.wps</groupId>
 			<artifactId>52n-wps-io</artifactId>
 			<version>3.6.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-codec</groupId>
+					<artifactId>commons-codec</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.n52.sensorweb</groupId>
@@ -188,6 +194,16 @@
 			<artifactId>janmayen</artifactId>
 			<version>1.1.0</version>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.6</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
