--- a/pom.xml
+++ b/pom.xml
@@ -69,11 +69,6 @@
 	</developers>
 	
 	<dependencies>
-		<dependency>
-			<groupId>org.n52.sensorweb</groupId>
-			<artifactId>52n-xml-wps-v100</artifactId>
-			<version>${common-xml.version}</version>
-		</dependency>
 		<!-- logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -116,64 +111,63 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.n52.wps</groupId>
-			<artifactId>52n-wps-io</artifactId>
-			<version>3.6.1</version>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-codec</groupId>
-					<artifactId>commons-codec</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.n52.sensorweb</groupId>
-			<artifactId>52n-xml-ows-v110</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.n52.wps</groupId>
-			<artifactId>52n-wps-commons</artifactId>
-			<version>3.6.1</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.n52.sensorweb</groupId>
-					<artifactId>52n-xml-wps-v100</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.apache.xmlbeans</groupId>
-					<artifactId>xmlbeans</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.google.guava</groupId>
-					<artifactId>guava</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>joda-time</groupId>
-					<artifactId>joda-time</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-api</artifactId>
-				</exclusion>
-				<exclusion>
-					<artifactId>woodstox-core-asl</artifactId>
-					<groupId>org.codehaus.woodstox</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.n52.wps</groupId>
-			<artifactId>52n-wps-config</artifactId>
-			<version>1.2.1</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.n52.wps</groupId>
-					<artifactId>52n-xml-wps-v100</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.n52.wps</groupId> -->
+<!-- 			<artifactId>52n-wps-io</artifactId> -->
+<!-- 			<version>3.6.1</version> -->
+<!-- 			<exclusions> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>commons-codec</groupId> -->
+<!-- 					<artifactId>commons-codec</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 			</exclusions> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.n52.wps</groupId> -->
+<!-- 			<artifactId>52n-wps-commons</artifactId> -->
+<!-- 			<version>3.6.1</version> -->
+<!-- 			<exclusions> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>org.n52.sensorweb</groupId> -->
+<!-- 					<artifactId>52n-xml-wps-v100</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>org.apache.xmlbeans</groupId> -->
+<!-- 					<artifactId>xmlbeans</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>com.google.guava</groupId> -->
+<!-- 					<artifactId>guava</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>joda-time</groupId> -->
+<!-- 					<artifactId>joda-time</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>org.slf4j</groupId> -->
+<!-- 					<artifactId>slf4j-api</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<artifactId>woodstox-core-asl</artifactId> -->
+<!-- 					<groupId>org.codehaus.woodstox</groupId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>org.n52.wps</groupId> -->
+<!-- 					<artifactId>52n-wps-config</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 			</exclusions> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.n52.wps</groupId> -->
+<!-- 			<artifactId>52n-wps-config</artifactId> -->
+<!-- 			<version>1.2.1</version> -->
+<!-- 			<exclusions> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>org.n52.wps</groupId> -->
+<!-- 					<artifactId>52n-xml-wps-v100</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 			</exclusions> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.apache.xmlbeans</groupId>
 			<artifactId>xmlbeans</artifactId>
@@ -309,6 +303,18 @@
 		<dependency>
 			<groupId>org.n52.wps</groupId>
 			<artifactId>52n-xml-wps-v20</artifactId>
+			<version>${common-xml.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.n52.sensorweb</groupId>
+			<artifactId>52n-xml-ows-v110</artifactId>
+			<version>2.3.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.n52.sensorweb</groupId>
+			<artifactId>52n-xml-wps-v100</artifactId>
 			<version>${common-xml.version}</version>
 			<scope>test</scope>
 		</dependency>
