--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 		<arctic-sea.version>5.0.1</arctic-sea.version>
 		<common-xml.version>2.3.0</common-xml.version>
 		<logback.version>1.0.13</logback.version>
+		<javaps.version>1.0.1-SNAPSHOT</javaps.version>
 		<org.springframework.version>4.1.6.RELEASE</org.springframework.version>
 		<org.spring-security.version>4.0.1.RELEASE</org.spring-security.version>
 		<maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
@@ -150,7 +151,7 @@
 		<dependency>
 			<groupId>org.n52.wps</groupId>
 			<artifactId>iceland-stream</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>${javaps.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework</groupId>
@@ -173,7 +174,7 @@
 		<dependency>
 			<groupId>org.n52.wps</groupId>
 			<artifactId>xml</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>${javaps.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework</groupId>
