--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 		<arctic-sea.version>5.0.1</arctic-sea.version>
 		<common-xml.version>2.3.0</common-xml.version>
 		<logback.version>1.0.13</logback.version>
-		<javaps.version>1.0.1-SNAPSHOT</javaps.version>
+		<javaps.version>1.1.1</javaps.version>
 		<org.springframework.version>4.1.6.RELEASE</org.springframework.version>
 		<org.spring-security.version>4.0.1.RELEASE</org.spring-security.version>
 		<maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
@@ -96,17 +96,17 @@
 			<!-- provided due to use of slf4j bridge -->
 			<scope>provided</scope>
 		</dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>23.4-jre</version>
-            <exclusions>
-               <exclusion>
-                   <groupId>com.google.code.findbugs</groupId>
-                   <artifactId>jsr305</artifactId>
-               </exclusion>
-            </exclusions>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>com.google.guava</groupId> -->
+<!--             <artifactId>guava</artifactId> -->
+<!--             <version>23.4-jre</version> -->
+<!--             <exclusions> -->
+<!--                <exclusion> -->
+<!--                    <groupId>com.google.code.findbugs</groupId> -->
+<!--                    <artifactId>jsr305</artifactId> -->
+<!--                </exclusion> -->
+<!--             </exclusions> -->
+<!--         </dependency> -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
