--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,13 @@
-<!--
-
-    ﻿Copyright (C) 2018 52°North Initiative for Geospatial Open Source
-    Software GmbH
-
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
-
--->
-<!-- ﻿Copyright (C) ${inceptionYear} - ${currentYear} 52°North Initiative 
-	for Geospatial Open Source Software GmbH Licensed under the Apache License, 
-	Version 2.0 (the "License"); you may not use this file except in compliance 
-	with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
-	Unless required by applicable law or agreed to in writing, software distributed 
+<!-- ﻿Copyright (C) 2018 52°North Initiative for Geospatial Open Source Software 
+	GmbH Licensed under the Apache License, Version 2.0 (the "License"); you 
+	may not use this file except in compliance with the License. You may obtain 
+	a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless 
+	required by applicable law or agreed to in writing, software distributed 
 	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
 	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
 	the specific language governing permissions and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -34,7 +17,7 @@
 	</parent>
 	<groupId>org.n52.geoprocessing</groupId>
 	<artifactId>wps-client-lib</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>52 North WPS Client libary</name>
 	<inceptionYear>2017</inceptionYear>
 	<properties>
@@ -50,14 +33,14 @@
 		<maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
 		<currentYear>2018</currentYear>
 	</properties>
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-            <comments>A business-friendly OSS license</comments>
-        </license>
-    </licenses>
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+			<comments>A business-friendly OSS license</comments>
+		</license>
+	</licenses>
 
 	<developers>
 		<developer>
@@ -69,7 +52,19 @@
 			<timezone>GMT+1</timezone>
 		</developer>
 	</developers>
-	
+
+	<scm>
+		<url>https://github.com/52North/wps-client-lib</url>
+		<connection>scm:git:git://github.com/52North/wps-client-lib.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/52North/wps-client-lib.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+
+	<issueManagement>
+		<system>GitHub issues</system>
+		<url>https://github.com/52North/wps-client-lib/issues?state=open</url>
+	</issueManagement>
+
 	<dependencies>
 		<!-- logging -->
 		<dependency>
@@ -96,17 +91,17 @@
 			<!-- provided due to use of slf4j bridge -->
 			<scope>provided</scope>
 		</dependency>
-<!--         <dependency> -->
-<!--             <groupId>com.google.guava</groupId> -->
-<!--             <artifactId>guava</artifactId> -->
-<!--             <version>23.4-jre</version> -->
-<!--             <exclusions> -->
-<!--                <exclusion> -->
-<!--                    <groupId>com.google.code.findbugs</groupId> -->
-<!--                    <artifactId>jsr305</artifactId> -->
-<!--                </exclusion> -->
-<!--             </exclusions> -->
-<!--         </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.google.guava</groupId> -->
+		<!-- <artifactId>guava</artifactId> -->
+		<!-- <version>23.4-jre</version> -->
+		<!-- <exclusions> -->
+		<!-- <exclusion> -->
+		<!-- <groupId>com.google.code.findbugs</groupId> -->
+		<!-- <artifactId>jsr305</artifactId> -->
+		<!-- </exclusion> -->
+		<!-- </exclusions> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -128,10 +123,10 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.9.5</version>
 		</dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.6</version>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.6</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-codec</groupId>
@@ -142,12 +137,12 @@
 					<artifactId>httpcore</artifactId>
 				</exclusion>
 			</exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpcore</artifactId>
-            <version>4.4.10</version>
-        </dependency>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4.10</version>
+		</dependency>
 		<dependency>
 			<groupId>org.n52.wps</groupId>
 			<artifactId>iceland-stream</artifactId>
@@ -162,12 +157,12 @@
 					<artifactId>spring-beans</artifactId>
 				</exclusion>
 				<exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpclient</artifactId>
+					<groupId>org.apache.httpcomponents</groupId>
+					<artifactId>httpclient</artifactId>
 				</exclusion>
 				<exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpcore</artifactId>
+					<groupId>org.apache.httpcomponents</groupId>
+					<artifactId>httpcore</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -210,15 +205,15 @@
 			<version>${arctic-sea.version}</version>
 			<exclusions>
 				<exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpclient</artifactId>
+					<groupId>org.apache.httpcomponents</groupId>
+					<artifactId>httpclient</artifactId>
 				</exclusion>
 				<exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpcore</artifactId>
+					<groupId>org.apache.httpcomponents</groupId>
+					<artifactId>httpcore</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.n52.arctic-sea</groupId>
 			<artifactId>svalbard</artifactId>
@@ -249,7 +244,7 @@
 			<artifactId>stax-api</artifactId>
 			<version>1.0.1</version>
 			<scope>runtime</scope>
-		</dependency>		
+		</dependency>
 		<!-- test dependencies -->
 		<dependency>
 			<groupId>org.n52.sensorweb</groupId>
