--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<parent>
 		<groupId>org.n52</groupId>
 		<artifactId>parent</artifactId>
-		<version>12</version>
+		<version>14</version>
 	</parent>
 	<groupId>org.n52.geoprocessing</groupId>
 	<artifactId>wps-client-lib</artifactId>
@@ -32,7 +32,7 @@
 		<version.java>1.8</version.java>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<slf4j.version>1.7.25</slf4j.version>
-		<arctic-sea.version>5.3.0-SNAPSHOT</arctic-sea.version>
+		<arctic-sea.version>5.3.0</arctic-sea.version>
 		<common-xml.version>2.3.0</common-xml.version>
 		<logback.version>1.0.13</logback.version>
 		<javaps.version>1.1.2-SNAPSHOT</javaps.version>
