--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 		<arctic-sea.version>5.3.0</arctic-sea.version>
 		<common-xml.version>2.3.0</common-xml.version>
 		<logback.version>1.0.13</logback.version>
-		<javaps.version>1.1.2-SNAPSHOT</javaps.version>
+		<javaps.version>1.2.0</javaps.version>
 		<org.springframework.version>4.1.6.RELEASE</org.springframework.version>
 		<org.spring-security.version>4.0.1.RELEASE</org.spring-security.version>
 		<maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
