--- a/pom.xml
+++ b/pom.xml
@@ -296,6 +296,20 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
+	
+	<repositories>		
+	    <repository>
+			<id>n52-releases</id>
+			<name>52n Releases</name>
+			<url>http://52north.org/maven/repo/releases</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+        </repository>
+	</repositories>
 	<build>
 		<plugins>
 			<plugin>
@@ -308,24 +322,34 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-enforcer-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>enforce</goal>
-						</goals>
-						<configuration>
-							<rules>
-								<requireJavaVersion>
-									<version>[${version.java},)</version>
-								</requireJavaVersion>
-							</rules>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireJavaVersion>
+                                    <version>[${version.java},)</version>
+                                </requireJavaVersion>
+                                <requireNoRepositories>
+                                    <!-- Allow repositories -->
+                                    <banRepositories>false</banRepositories>
+                                    <!-- Allow SNAPSHOT repositories -->
+                                    <allowSnapshotRepositories>true</allowSnapshotRepositories>
+                                    <!-- Define allowed repositories, use repo id -->
+                                    <allowedRepositories>
+                                        <id>n52-releases</id>
+                                    </allowedRepositories>
+                                </requireNoRepositories>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
 			<plugin>
 				<groupId>com.mycila</groupId>
