--- a/pom.xml
+++ b/pom.xml
@@ -294,6 +294,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+                <dependency>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-core</artifactId>
+                    <version>1.3</version>
+                </dependency>
 	</dependencies>
 	
 	<repositories>		
