--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 sudo: false
 install: true
-script: mvn -fae -U -B clean install
+script: mvn -fae -U -B clean install -with-dependencies
 jdk:
   - openjdk8
   - openjdk9
