--- a/pom.xml
+++ b/pom.xml
@@ -404,6 +404,14 @@
 						</goals>
 					</execution>
 				</executions>
+				<dependencies>
+                    <dependency>
+                        <groupId>com.sun.istack</groupId>
+                        <artifactId>istack-commons-runtime</artifactId>
+                        <version>3.0.10</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                </dependencies>
 			</plugin>
 		</plugins>
 	</build>
