--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <parent>
             <groupId>org.n52</groupId>
             <artifactId>parent</artifactId>
-            <version>17</version>
+            <version>18</version>
         </parent>
 	<groupId>org.n52.geoprocessing</groupId>
 	<artifactId>wps-client-lib</artifactId>
@@ -404,6 +404,14 @@
 						</goals>
 					</execution>
 				</executions>
+				<dependencies>
+                    <dependency>
+                        <groupId>com.sun.istack</groupId>
+                        <artifactId>istack-commons-runtime</artifactId>
+                        <version>3.0.10</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                </dependencies>
 			</plugin>
 		</plugins>
 	</build>
