--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <!--
 
-    ﻿Copyright (C) 2019 52°North Initiative for Geospatial Open Source
+    ﻿Copyright (C) 2020 52°North Initiative for Geospatial Open Source
     Software GmbH
 
     Licensed under the Apache License, Version 2.0 (the "License");
@@ -38,7 +38,7 @@
 		<org.springframework.version>4.1.6.RELEASE</org.springframework.version>
 		<org.spring-security.version>4.0.1.RELEASE</org.spring-security.version>
 		<maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
-		<currentYear>2019</currentYear>
+		<currentYear>2020</currentYear>
 	</properties>
 	<licenses>
 		<license>
@@ -365,7 +365,7 @@
 					</includes>
 					<strictCheck>true</strictCheck>
 					<properties>
-						<year>2019</year>
+						<year>${currentYear}</year>
 					</properties>
 					<mapping>
 						<java>SLASHSTAR_STYLE</java>
